--- a/template/package.json
+++ b/template/package.json
@@ -1,29 +1,29 @@
 {
   "name": "sls-sample-app",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "StrongLoop Suite Sample Application",
   "main": "app.js",
   "dependencies": {
-    "loopback": "1.1.0",
-    "loopback-connector-rest": "1.1.0",
-    "request": "~2.21.0",
-    "strong-task-emitter": "~0.0.4",
-    "rc": "~0.3.0",
-    "cors": "~1.0.1"
+    "loopback": "~1.6.1",
+    "request": "~2.33.0",
+    "strong-task-emitter": "~0.0.5",
+    "rc": "~0.3.3",
+    "cors": "~2.1.1",
+    "loopback-explorer": "~1.1.0",
+    "loopback-connector-rest": "~1.1.3"
   },
   "optionalDependencies": {
-    "strong-cluster-control": "~0.1.0",
-    "strong-agent": "~0.2.15",
-    "loopback-connector-oracle": "~1.1.0",
-    "loopback-connector-mongodb": "~1.1.0",
-    "loopback-connector-mysql": "~1.0.0",
+    "loopback-connector-oracle": "~1.1.5",
+    "loopback-connector-mongodb": "~1.1.4",
+    "loopback-connector-mysql": "~1.1.1",
     "weighted": "~0.2.2",
     "shuffle": "~0.2.1",
-    "text-table": "~0.1.1"
+    "text-table": "~0.2.0"
   },
   "devDependencies": {
-    "supertest": "~0.7.1",
-    "mocha": "~1.12.0"
+    "supertest": "~0.9.0",
+    "mocha": "~1.17.1",
+    "async": "~0.2.10"
   },
   "repository": {
     "type": "git",
